# guile-mfem

./: .gitignore  .gitmodules  BUGS.md  CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: build-and-test-callable.yml  build-and-test-dispatch.yml  release_binary.yml  testrelease_binary.yml
_build_system/: build_config.py
_reference/: README.md
cmake/: FindGuile.cmake  FindMFEM.cmake  PostProcessProxy.cmake  SwigGuile.cmake
docs/: changelog.txt
docs/adr/: 0001-build-system-cmake.md  0002-fork-pymfem-adapt-for-guile.md  0003-director-callback-shims.md  0004-numeric-arrays-srfi4.md  0005-goops-proxy-classes.md  0006-ci-from-pymfem-workflows.md  0007-swig-from-forked-source.md  0008-self-loading-modules-and-umbrella.md  0009-example-coding-style.md  0010-test-suite-structure.md  0011-comprehensive-test-coverage.md  0012-director-callback-support.md  template.md
examples/: ex0-lisp.scm  ex0.scm  ex1-lisp.scm  ex1.scm  ex14-lisp.scm  ex14.scm  ex2-lisp.scm  ex2.scm  ex3-lisp.scm  ex3.scm  ex4-lisp.scm  ex4.scm
mfem/: __init__.py
mfem/_par/: complex_fem.i  ordering.i
mfem/_ser/: array.i  arrays_by_name.i  attribute_sets.i  bilinearform.i  bilininteg.i  bounds.i  coefficient.i  complex_fem.i  densemat.i  device.i  doftrans.i  element.i  eltrans.i  enzyme.i  fe.i  fe_base.i  fe_coll.i  fe_fixed_order.i  fe_h1.i  fe_l2.i  fe_nd.i  fe_nurbs.i  fe_pos.i  fe_rt.i  fe_ser.i  fespace.i  geom.i  globals.i  gridfunc.i  handle.i  hash.i  hybridization.i  integrator.i  intrules.i  linearform.i  lininteg.i  matrix.i  mem_manager.i  mesh.i  ncmesh.i  (+16 more)
mfem/common/: array_instantiation_macro.i  array_listtuple_typemap.i  data_size_typemap.i  enum_class.i  existing_mfem_headers.i  io_stream_typemap.i  memorytype_typemap.i  numpy_int_typemap.i  typemap_macros.i
swig/guile/: common.scm  mfem.scm
test/: example-harness.scm  run-tests.scm  unit-harness.scm
test/examples/: test-ex0-lisp.scm  test-ex0.scm  test-ex1-lisp.scm  test-ex1.scm  test-ex14-lisp.scm  test-ex14.scm  test-ex2-lisp.scm  test-ex2.scm  test-ex3-lisp.scm  test-ex3.scm  test-ex4-lisp.scm  test-ex4.scm
test/unit/: test-amg.scm  test-array.scm  test-bilinearform.scm  test-blockmatrix.scm  test-blockoperator.scm  test-boundary.scm  test-ceed-main.scm  test-ceed.scm  test-chypre.scm  test-coefficient.scm  test-complex-operator.scm  test-complexmg.scm  test-constrained-solver.scm  test-custom-coefficient.scm  test-datacollection.scm  test-densemat.scm  test-device.scm  test-dfem-diffusion.scm  test-dfem-divergence.scm  test-dfem-lvector.scm  test-dfem-mass.scm  test-dg.scm  test-direct-solvers.scm  test-domain-int.scm  test-enzyme.scm  test-ex0-lisp.scm  test-ex0.scm  test-ex1-lisp.scm  test-ex1.scm  test-ex2-lisp.scm  test-ex2.scm  test-exodus-reader.scm  test-exodus-writer.scm  test-fe.scm  test-fespace.scm  test-fms.scm  test-geom.scm  test-gridfunc.scm  test-gslib.scm  test-handle.scm  (+30 more)
